2006-03-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-search.c: fix sanity check, typo spotted
	by Krzysiek Szczuka.

2006-03-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit.c: do not open a new display at every launch.

2006-03-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-tab.c: fix a compiler warning.

=== gedit 2.14.0 ===

2006-03-12  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.14.0 released

=== gedit 2.13.93 ===

2006-03-05  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.13.93 released

2006-03-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/dialogs/gedit-search-dialog.c: grab focus on the entry.

2006-03-05  Steve Frécinaux  <steve@istique.net>

	* plugins/snippets/snippets/SnippetsDialog.py:
	* plugins/snippets/snippets/snippets.glade:
	* plugins/externaltools/tools/manager.py:
	
	Show the Plugin page from gedit help when clicking on the Help button
	of the Snippets and External Tools dialogs

2006-03-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetController.py:
	fixed Ctrl+space being stopped from handling even if snippets doesn't
	show a popup dialog (see bug #333326). Fixed handling of single
	non-alphanumeric tab triggers
	
	* plugins/snippets/snippets/SnippetsLibrary.py:
	fixed loading of duplicate system snippets (see bug #332384)
	
2006-03-04  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-languages-manager.c (string_to_tag_style):
	fixed a mem leak (see bug #172352)

2006-03-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-spinner.c: sync the code to latest epiphany code. Should
	fix multihead issues.

2006-03-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #333129 – [Multihead] cannot launch multiple instances of 
	                    gedit on different heads
	
	* gedit/gedit-app.c (gedit_app_create_window): added screen argument
	(is_in_workspace): new function